@@ -1,5 +1,8 @@
 NOCC 0.9.8    ?? ??, 2005
 
+    * Added new configuration option in order to use a default encoding charset
+      (default to UTF-8) in case no one is provided by the displayed mail
+      (Arnaud Boudou).
     * Replace all "<?" tags by "<?php" tags. (Arnaud Boudou, bug #1230999).
     * Convert Nocc to UTF-8 support (Arnaud Boudou).
     * Replying to HTML mails now convert HTML special chars to standard chars
